--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     />
     
  
-    <title>Saifie Portfolio</title>
+    <title>Story Storm</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
