--- a/public/index.html
+++ b/public/index.html
@@ -17,11 +17,11 @@
   
     <meta
       name="description"
-      content="Saifie Portfolio"
+      content="Story Storm"
     />
     
  
-    <title>Saifie Portfolio</title>
+    <title>Story Storm</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
